[package]
name = "xstm"
description = "A Rust-implemented Software Transactional Memory (STM) library using TL2 (Transactional Locking II) algorithm"
version = "0.1.0"
edition = "2021"
authors = ["xstater"]
readme = "ReadMe.md"
repository = "https://github.com/xstater/xstm"
license = "MIT"
keywords = ["stm", "tl2", "concurrency"]
categories = ["concurrency"]

[features]
retry_info = []
small_alloc = ["dep:smallvec"]

[profile.bench]
inherits = "release"
debug = true

[dependencies]
smallvec = { version = "1.13.2", optional = true }

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }
divan = "0.1"

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "fib"
harness = false

[[bench]]
name = "vec"
harness = false
